# moonlight-qt

./: .cursorrules  .gitignore  .gitmodules  .packit.yaml  .qmake.cache  .qmake.stash  .travis.yml  ATOMIC_MODESETTING_TODO.md  AUTO_BITRATE_README.md  CLAUDE.md  CLIPBOARD_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  HDR_IMPLEMENTATION_NOTES.md  HDR_IMPLEMENTATION_SUMMARY.md  Launch Screen.xib  Mac.storyboard  MainFrame-iPad.storyboard  MainFrame-iPhone.storyboard  MainFrame.storyboard  Makefile  README.md  VC4_HDR_LIMITATION.md  appveyor.yml  assets-attribution.md  build-ffmpeg.sh  check_git_status.sh  commit_changes.sh  create_feature_branch.sh  globaldefs.pri  iPad.storyboard  iPhone.storyboard  identitymanager.cpp  identitymanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build  moonlight-qt.pro  (+12 more)
app/: Info.plist  Info.plist-e  Makefile  Makefile.Debug  Makefile.Release  Moonlight.exe.manifest  PlayBase.exe.manifest  SDL_compat.c  SDL_compat.h  app.pro  gamecontrollerdb.txt  identitymanager.cpp  identitymanager.h  imageutils.cpp  imageutils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  masterhook.c  masterhook_internal.c  meson.build  moonlight.icns  path.cpp  path.h  pc_play.icns  qml.qrc  qml_qmlcache.qrc  resources.qrc  streamwidget.cpp  streamwidget.h  utils.h  wm.cpp
app/Moonlight.app/Contents/: Info.plist
app/backend/: autoupdatechecker.cpp  autoupdatechecker.h  boxartmanager.cpp  boxartmanager.h  clipboardmanager.cpp  clipboardmanager.h  computermanager.cpp  computermanager.h  computerseeker.cpp  computerseeker.h  i3windowmanager.cpp  i3windowmanager.h  identitymanager.cpp  identitymanager.h  nvaddress.h  nvapp.cpp  nvapp.h  nvcomputer.cpp  nvcomputer.h  nvhttp.cpp  nvhttp.h  nvpairingmanager.cpp  nvpairingmanager.h  otppairingmanager.cpp  otppairingmanager.h  richpresencemanager.cpp  richpresencemanager.h  servercommandmanager.cpp  servercommandmanager.h  systemproperties.cpp  systemproperties.h
app/cli/: commandlineparser.cpp  commandlineparser.h  listapps.cpp  listapps.h  pair.cpp  pair.h  quitstream.cpp  quitstream.h  startstream.cpp  startstream.h
app/gui/: AppView.qml  AutoResizingComboBox.qml  CenteredGridView.qml  CliListAppsSegue.qml  CliPair.qml  CliQuitStreamSegue.qml  CliStartStreamSegue.qml  ErrorMessageDialog.qml  GamepadMapper.qml  HotKeysView.qml  HotkeyView.qml  HotkeysView.qml  NavigableDialog.qml  NavigableItemDelegate.qml  NavigableMenu.qml  NavigableMenuButton.qml  NavigableMenuItem.qml  NavigableMessageDialog.qml  NavigableToolButton.qml  PcView.qml  PreferencesView.qml  QuitSegue.qml  SettingsView.qml  StreamSegue.qml  appmodel.cpp  appmodel.h  computermodel.cpp  computermodel.h  hotkeymodel.cpp  hotkeymodel.h  main.qml  main.ui  mainwindow.cpp  mainwindow.h  meson.build  popupmanager.h  qtquickcontrols2.conf  sdlgamepadkeynavigation.cpp  sdlgamepadkeynavigation.h
app/http/: boxartmanager.cpp  computermanager.cpp  computermanager.h  identitymanager.cpp  identitymanager.h  nvhttp.cpp  nvhttp.h  nvpairingmanager.cpp  nvpairingmanager.h
app/languages/: meson.build  qml_bg.qm  qml_bg.ts  qml_ckb.qm  qml_ckb.ts  qml_cs.qm  qml_cs.ts  qml_de.qm  qml_de.ts  qml_el.qm  qml_el.ts  qml_eo.qm  qml_eo.ts  qml_es.qm  qml_es.ts  qml_et.qm  qml_et.ts  qml_fr.qm  qml_fr.ts  qml_he.qm  qml_he.ts  qml_hi.qm  qml_hi.ts  qml_hu.qm  qml_hu.ts  qml_it.qm  qml_it.ts  qml_ja.qm  qml_ja.ts  qml_ko.qm  qml_ko.ts  qml_lt.qm  qml_lt.ts  qml_nb_NO.qm  qml_nb_NO.ts  qml_nl.qm  qml_nl.ts  qml_pl.qm  qml_pl.ts  qml_pt.qm  (+25 more)
app/release/: boxartmanager.moc  computermanager.moc  computermodel.moc  gui_AppView_qml.cpp  gui_AutoResizingComboBox_qml.cpp  gui_CenteredGridView_qml.cpp  gui_CliPair_qml.cpp  gui_CliQuitStreamSegue_qml.cpp  gui_CliStartStreamSegue_qml.cpp  gui_ErrorMessageDialog_qml.cpp  gui_GamepadMapper_qml.cpp  gui_NavigableDialog_qml.cpp  gui_NavigableItemDelegate_qml.cpp  gui_NavigableMenuItem_qml.cpp  gui_NavigableMenu_qml.cpp  gui_NavigableMessageDialog_qml.cpp  gui_NavigableToolButton_qml.cpp  gui_PcView_qml.cpp  gui_QuitSegue_qml.cpp  gui_SettingsView_qml.cpp  gui_StreamSegue_qml.cpp  gui_main_qml.cpp  moc_appmodel.cpp  moc_autoupdatechecker.cpp  moc_boxartmanager.cpp  moc_compatfetcher.cpp  moc_computermanager.cpp  moc_computermodel.cpp  moc_computerseeker.cpp  moc_listapps.cpp  moc_mappingfetcher.cpp  moc_nvhttp.cpp  moc_pair.cpp  moc_predefs.h  moc_quitstream.cpp  moc_sdlgamepadkeynavigation.cpp  moc_session.cpp  moc_startstream.cpp  moc_streamingpreferences.cpp  moc_systemproperties.cpp  (+3 more)
app/res/: macos.icns  moonlight-dance.apng
app/settings/: artemissettings.cpp  artemissettings.h  compatfetcher.cpp  compatfetcher.h  hotkeyitem.h  hotkeymanager.cpp  hotkeymanager.h  mappingfetcher.cpp  mappingfetcher.h  mappingmanager.cpp  mappingmanager.h  streamingpreferences.cpp  streamingpreferences.h  themeManager.cpp  themeManager.h
app/shaders/: build_hlsl.bat  d3d11_ayuv_pixel.fxc  d3d11_bt2020lim_pixel.fxc  d3d11_bt2020lim_pixel.hlsl  d3d11_bt601lim_pixel.fxc  d3d11_bt601lim_pixel.hlsl  d3d11_genyuv_pixel.fxc  d3d11_genyuv_pixel.hlsl  d3d11_overlay_pixel.fxc  d3d11_overlay_pixel.hlsl  d3d11_vertex.fxc  d3d11_vertex.hlsl  d3d11_video_pixel.fxc  d3d11_video_pixel.hlsl  d3d11_video_pixel_end.hlsli  d3d11_video_pixel_start.hlsli  d3d11_y410_pixel.fxc  d3d11_yuv420_pixel.fxc  d3d11_yuv420_pixel.hlsl  d3d11_yuv444_pixel_end.hlsli  d3d11_yuv444_pixel_start.hlsli  egl.frag  egl.vert  egl_nv12.frag  egl_opaque.frag  egl_overlay.frag  vt_renderer.metal
app/streaming/: adaptivebitrateservice.cpp  adaptivebitrateservice.h  audio.c  audio.cpp  bandwidth.cpp  bandwidth.h  connection.cpp  input.c  input.cpp  input.h  input.hpp  macoswindow.h  macoswindow.mm  renderer.h  sdlhelper.cpp  sdlhelper.h  session.cpp  session.h  session.hpp  streaming.h  streamutils.cpp  streamutils.h  video.c  video.cpp
app/utils/: bandwidth.h
docs/: CMakeLists.txt  DEV_GUIDE.md  Doxyfile.in  PROTOCOL_ANALYSIS.md
gip-bridge/: Cargo.toml  cbindgen.toml
gip-bridge/include/: gip_bridge.h
gip-bridge/src/: ffi.rs  lib.rs  main.rs  usb.rs
(+1659 files in other folders)
