[package]
name = "gip-bridge"
version = "0.1.0"
edition = "2024"
description = "USB driver for GIP-protocol (Xbox One/Series-licensed) controllers, exposed as a C ABI for embedding into GipBridgeController on macOS"
license = "GPL-3.0-or-later"
publish = false

[lib]
name = "gip_bridge"
crate-type = ["staticlib", "lib"]

[dependencies]
anyhow = "1.0.103"
env_logger = "0.11.11"
log = "0.4.33"
nusb = "0.2.4"
