qt.compile_translations(
  ts_files: [
    'qml_zh_CN.ts',
    'qml_zh_TW.ts',
    'qml_de.ts',
    'qml_fr.ts',
    'qml_nb_NO.ts',
    'qml_ru.ts',
    'qml_es.ts',
    'qml_ja.ts',
    'qml_vi.ts',
    'qml_th.ts',
    'qml_ko.ts',
    'qml_hu.ts',
    'qml_nl.ts',
    'qml_sv.ts',
    'qml_tr.ts',
    'qml_uk.ts',
    'qml_el.ts',
    'qml_hi.ts',
    'qml_it.ts',
    'qml_pt.ts',
    'qml_pt_BR.ts',
    'qml_pl.ts',
    'qml_cs.ts',
    'qml_he.ts',
    'qml_ckb.ts',
    'qml_lt.ts',
    'qml_et.ts',
    'qml_bg.ts',
    'qml_eo.ts',
    'qml_ta.ts',
  ],
)
